Fixed table overflow in messages

--- a/wcfsetup/install/files/style/ui/message.scss
+++ b/wcfsetup/install/files/style/ui/message.scss
@@ -627,9 +627,7 @@
 	}
 }
 
-@include screen-sm-down {
-	/* allow tables to overflow on small screens */
-	.messageTableOverflow {
-		overflow: auto;
-	}
+/* allow tables to overflow on all screens */
+.messageTableOverflow {
+	overflow: auto;
 }
